--- a/fluxRss/fluxRss/Base.lproj/Main.storyboard
+++ b/fluxRss/fluxRss/Base.lproj/Main.storyboard
@@ -28,28 +28,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" scalesPageToFit="YES" id="t0K-g6-YZv">
-                                <rect key="frame" x="0.0" y="63" width="703" height="661"/>
+                                <rect key="frame" x="0.0" y="0.0" width="703" height="724"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </webView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="ADN-zs-CCa">
-                                <rect key="frame" x="-8" y="724" width="703" height="44"/>
+                                <rect key="frame" x="0.0" y="724" width="703" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
                                     <barButtonItem image="back" id="Jvc-r0-8z8">
                                         <connections>
-                                            <action selector="goBack:" destination="JEX-9P-axG" id="jn5-IW-BEt"/>
+                                            <action selector="goBack" destination="t0K-g6-YZv" id="1O5-q6-cqI"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem image="forward" id="Zed-z6-bpn">
                                         <connections>
-                                            <action selector="goForward:" destination="JEX-9P-axG" id="8mA-Fh-P31"/>
+                                            <action selector="goForward" destination="t0K-g6-YZv" id="uTF-gc-X22"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="i0t-Dz-z7C"/>
                                     <barButtonItem systemItem="refresh" id="vKq-ns-2D7">
                                         <connections>
-                                            <action selector="goRefresh:" destination="JEX-9P-axG" id="cw7-yx-Q6w"/>
+                                            <action selector="reload" destination="t0K-g6-YZv" id="YCI-qT-rMm"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
